--- a/.gitmodules
+++ b/.gitmodules
@@ -7,6 +7,6 @@
 	url = git@github.com:hazardland/core.php.git
 	branch = master
 [submodule "lib/user"]
-	path = lib/core
+	path = lib/user
 	url = git@github.com:hazardland/user.php.git
 	branch = master
